# IChingDiviner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CREDITS.txt  DEMO.txt  LICENSE  README.md  TODO.md  aimanager.cpp  aimanager.h  clickablelabel.cpp  clickablelabel.h  constants.cpp  constants.h  donationdialog.cpp  donationdialog.h  helpmenudialog.cpp  helpmenudialog.h  iching.cpp  iching.h  io.github.alamahant.IChingDiviner-local.yml.example  io.github.alamahant.IChingDiviner.desktop  io.github.alamahant.IChingDiviner.metainfo.xml  io.github.alamahant.IChingDiviner.yml  io.github.alamahant.IChingDiviner.yml.example  main.cpp  mainwindow.cpp  mainwindow.h  mistralapi.cpp  model.h  modelselectordialog.cpp  modelselectordialog.h  resources.qrc
.github/: AGENTS.md  FUNDING.yml
repo/: summary  summary.idx
repo/refs/heads/app/io.github.alamahant.IChingDiviner/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/io.github.alamahant.IChingDiviner.Debug/x86_64/: master
repo/summaries/: 8ea0cea77033f7a9e442ab4cd9a0cfea545e92dd9f8fa43792993c46c3b680b6-33455e340b178e504ca0bd7baecd9809ae28d6f9c4b55807012dc412cf8bd010.delta
